# File-Converter

./: File Converter.py  FileConverter.py  LICENSE  README.md  pyproject.toml
Documentation/: File_Converter_Documentation.tex
src/MaybeMarq.egg-info/: requires.txt
src/package/: File Converter.spec
